[package]
name = "warp-keeper"
version = "0.2.3"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.50", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
socket2 = "0.5.10"
toml = "0.8.23"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
incremental = false
